--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,8 @@
     <tr>
       <th>Name</th>
       <th>Price</th>
-      <th>PARMENT</th>
+      <th>Stripe_Product_Id</th>
+      <th>PAYMENT</th>
       <th>Sales Count<th>
       <th colspan="3"></th>
     </tr>
@@ -18,6 +19,7 @@
       <tr>
         <td><%= product %></td>
         <td><%= number_to_currency(product.price/100) %></td>
+        <td><%= product.stripe_product_id %></td>
         <td><%= button_to "Buy now!", checkout_create_path, params: {id: product.id}, remote: true %></td>
         <td><%= product.sales_count %></td>
         <td><%= link_to 'Show', product %></td>
