beautify success page display, disable buy now button when buy to validating...

--- a/app/views/checkout/success.html.erb
+++ b/app/views/checkout/success.html.erb
@@ -1,2 +1,7 @@
 <h1>Success</h1>
 
+Status: <%= @session_with_expand.payment_status %>
+<br />
+Amount paid: 
+<%= @session_with_expand.amount_total %>
+<%= @session_with_expand.currency %>
