--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,10 @@
       <%= product.name %>
       <br />
     <% end %>
+    <% if @cart.present? %>
+    <%= button_to "Buy now!", checkout_create_path, remote: true, data: { disable_with: "validating..." } %>
+    <% end %>
+    <%= @cart.collect { |item| item.to_builder.attributes! } %>
     <hr />
     <%= yield %>
   </body>
