--- a/app/views/checkout/success.html.erb
+++ b/app/views/checkout/success.html.erb
@@ -5,3 +5,10 @@ Status: <%= @session_with_expand.payment_status %>
 Amount paid: 
 <%= @session_with_expand.amount_total %>
 <%= @session_with_expand.currency %>
+<br />
+<h4>Products</h4>
+<% @session_with_expand.line_items.data.each do |line_item| %>
+    <% product = Product.find_by(stripe_product_id: line_item.price.product) %>
+    <%= product.name %>
+    <br />
+<% end %>
