--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,7 +20,7 @@
     <% @products.each do |product| %>
       <tr>
         <td><%= product %></td>
-        <td><%= product.price/100 %></td>
+        <td><%= product.price_cents %></td>
         <td><%= product.currency %></td>
         <td><%= product.stripe_product_id %></td>
         <td><%= product.stripe_price_id %></td>
